--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "doctypes": "^1.1.0",
+    "mocha": "^3.3.0",
     "pug-attrs": "^2.0.2",
     "pug-error": "^1.3.2",
     "pug-lexer": "^3.1.0",
