--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "watch": "watchify app.js -o public/app.js -v",
+    "build": "node compile-tpl && browserify app.js -o public/app.js",
+    "start": "npm run watch & nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browserify": "^14.3.0",
     "doctypes": "^1.1.0",
+    "express": "^4.15.2",
     "mocha": "^3.3.0",
+    "nodemon": "^1.11.0",
     "pug-attrs": "^2.0.2",
     "pug-error": "^1.3.2",
     "pug-lexer": "^3.1.0",
     "pug-parser": "^2.0.2",
     "pug-runtime": "^2.0.3",
+    "virtual-dom": "^2.1.1",
     "void-elements": "^3.1.0",
+    "watchify": "^3.9.0",
     "with": "^5.1.1"
   }
 }
