--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "node compile-tpl && browserify app.js -o public/app.js",
     "start": "npm run watch & nodemon server.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "batiste.bieler@gmail.com",
+  "license": "MIT",
   "devDependencies": {
     "browserify": "^14.3.0",
     "doctypes": "^1.1.0",
@@ -18,7 +18,6 @@
     "mocha": "^3.3.0",
     "nodemon": "^1.11.0",
     "pug-attrs": "^2.0.2",
-    "pug-error": "^1.3.2",
     "pug-lexer": "^3.1.0",
     "pug-parser": "^2.0.2",
     "pug-runtime": "^2.0.3",
@@ -26,5 +25,12 @@
     "void-elements": "^3.1.0",
     "watchify": "^3.9.0",
     "with": "^5.1.1"
+  },
+  "dependencies": {
+    "pug-attrs": "^2.0.2",
+    "pug-error": "^1.3.2",
+    "pug-lexer": "^3.1.0",
+    "pug-parser": "^2.0.2",
+    "pug-runtime": "^2.0.3"
   }
 }
