--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pug-vdom",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "pug-vdom.js",
   "scripts": {
     "test": "mocha",
     "watch": "watchify app.js -o public/app.js -v",
@@ -20,15 +20,13 @@
     "pug-attrs": "^2.0.2",
     "pug-lexer": "^3.1.0",
     "pug-parser": "^2.0.2",
-    "pug-runtime": "^2.0.3",
+    "pug-runtime": "^2.0.3",  
     "virtual-dom": "^2.1.1",
     "void-elements": "^3.1.0",
     "watchify": "^3.9.0",
     "with": "^5.1.1"
   },
   "dependencies": {
-    "pug-attrs": "^2.0.2",
-    "pug-error": "^1.3.2",
     "pug-lexer": "^3.1.0",
     "pug-parser": "^2.0.2",
     "pug-runtime": "^2.0.3"
