added runtime library and moved messy attr compilation to it

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "author": "batiste.bieler@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^14.3.0",
+    "browserify": "^14.5.0",
     "doctypes": "^1.1.0",
     "express": "^4.15.2",
     "mocha": "^3.3.0",
     "nodemon": "^1.11.0",
     "pug-attrs": "^2.0.2",
     "pug-lexer": "^3.1.0",
+    "pug-linker": "^3.0.3",
+    "pug-load": "^2.0.9",
     "pug-parser": "^2.0.2",
     "pug-runtime": "^2.0.3",
     "virtual-dom": "^2.1.1",
