--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "watchify": "^3.9.0",
     "with": "^5.1.1"
   },
+  "publishConfig": {
+    "registry": "http://registry.npmjs.org"
+  },
   "dependencies": {
     "pug-lexer": "^3.1.0",
     "pug-linker": "^3.0.3",
