--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browserify": "^14.5.0",
     "doctypes": "^1.1.0",
     "express": "^4.15.2",
+    "jsdom": "^12.2.0",
     "mocha": "^3.3.0",
     "nodemon": "^1.11.0",
     "pug-attrs": "^2.0.2",
