--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pug-vdom",
-  "version": "1.0.8",
+  "version": "1.0.9-0",
   "description": "",
   "main": "pug-vdom.js",
   "scripts": {
